--- a/MNIST Convert.ipynb
+++ b/MNIST Convert.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convert Original lecun files into csv"
+    "# Convert original lecun files into csv"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Reading files and Renaming labels column and save with new name:\n",
+    "# Reading files and renaming labels column and save with new name:\n",
     "in train set our 'label' column named '5' <br>\n",
     "in test set our 'label' column named '7'"
    ]
@@ -93,6 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -104,6 +105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -122,170 +124,6 @@
     "# Writing files\n",
     "df_orig_train.to_csv('mnist_train_final.csv', index=False)\n",
     "df_orig_test.to_csv('mnist_test_final.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "# Loading csv files "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "df_orig_train = pd.read_csv('mnist_train_final.csv')\n",
-    "df_orig_test = pd.read_csv('mnist_test_final.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_orig_train.info()\n",
-    "print(\"\\n\")\n",
-    "df_orig_test.info()\n",
-    "# print(\"\\n\")\n",
-    "# df_sample_submission.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_orig_train.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_orig_test.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Train Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ind = 3\n",
-    "\n",
-    "labels_train = df_orig_train['label'].as_matrix()\n",
-    "print(labels_train[ind])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_digits = df_orig_train.drop('label',axis=1)\n",
-    "df_digits.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Training Data\n",
-    "digits_data_train = df_digits.as_matrix()\n",
-    "\n",
-    "\n",
-    "digit = digits_data_train[ind]\n",
-    "digit = digit.reshape(28,28)\n",
-    "plt.title('this is  --->   ' + str(labels_train[ind]))\n",
-    "plt.imshow(digit, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ind = 3\n",
-    "\n",
-    "labels_test = df_orig_test['label'].as_matrix()\n",
-    "print(labels_test[ind])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_digits = df_orig_test.drop('label',axis=1)\n",
-    "df_digits.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Test Data\n",
-    "digits_data_train = df_digits.as_matrix()\n",
-    "\n",
-    "\n",
-    "digit = digits_data_train[ind]\n",
-    "digit = digit.reshape(28,28)\n",
-    "plt.title('this is  --->   ' + str(labels_test[ind]))\n",
-    "plt.imshow(digit, cmap='gray')"
    ]
   },
   {
