--- a/MNIST Convert.ipynb
+++ b/MNIST Convert.ipynb
@@ -93,7 +93,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -105,7 +104,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -121,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "# Writing files\n",
+    "# Writing final version of files\n",
     "df_orig_train.to_csv('mnist_train_final.csv', index=False)\n",
     "df_orig_test.to_csv('mnist_test_final.csv', index=False)"
    ]
